actualiza notebook y readme

--- a/{{cookiecutter.project_slug}}/notebooks/00_DataPrep.ipynb
+++ b/{{cookiecutter.project_slug}}/notebooks/00_DataPrep.ipynb
@@ -8,21 +8,21 @@
     "#### {{cookiecutter.project_short_description}}\n",
     "\n",
     "<details>\n",
-    "    <summary><strong>Goal</strong></summary>\n",
-    "    \"The goal of this notebook is to ...\"\n",
+    "    <summary><strong>Meta</strong></summary>\n",
+    "    \"La meta de este notebook es recrear la figura X del reporte XYZ ...\"\n",
     "    <ul>\n",
-    "        <li> measurable goals for this notebook </li>\n",
-    "        <li> Ex 1: Identify <i>variables of interest in dataset <strong>name.dta</strong></i> </li>\n",
-    "        <li> Ex 2: Create a <i>working dataset</i> from raw data.</li>\n",
+    "        <li> Metas mensurables </li>\n",
+    "        <li> Ej 1: Identificar <i>variables de interes en el conjunto de datos <strong>nombre_chido_de_conjunto_de_datos.csv</strong></i> </li>\n",
+    "        <li> Ej 2: Crear un <i>dataset trabajable</i> de los datos en bruto.</li>\n",
     "    </ul>\n",
     "</details>\n",
     "\n",
     "<details>\n",
-    "    <summary><strong>Context</strong></summary>\n",
-    "    Context at the moment (i.e. \"We've downloaded raw data from <strong><i>website.com</i></strong> and are now in the process of creating a mastefile.\")\n",
-    "    <li> What is the final goal of this project?</li>\n",
-    "    <li> What are we trying to recreate? Where are we in the process?</li>\n",
-    "    <li> Any links to documentation / figures.</li>\n",
+    "    <summary><strong>Contexto</strong></summary>\n",
+    "    Contexto en este momento (por ejemplo, \"hemos descargado datos sin procesar de <strong><i>website.com</i> </strong> y ahora estamos en el proceso de crear un masterfile\").\n",
+    "    <li> ¿Cuál es el objetivo final de este proyecto? </li>\n",
+    "    <li> ¿Qué estamos tratando de recrear? ¿Dónde estamos en el proceso? </li>\n",
+    "    <li> Cualquier enlace a documentación / figuras. </li>\n",
     "</details>"
    ]
   },
@@ -35,11 +35,11 @@
     "import pandas as pd\n",
     "from zipfile import ZipFile\n",
     "from pathlib import Path\n",
-    "from tools import tree\n",
+    "from herramientas import arbol\n",
     "from datetime import datetime as dt\n",
-    "today = dt.today().strftime(\"%d-%b-%y\")\n",
+    "hoy = dt.today().strftime(\"%d-%b-%y\")\n",
     "\n",
-    "today"
+    "hoy"
    ]
   },
   {
@@ -48,10 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RAW_DATA = Path(\"../data/raw/\")\n",
-    "INTERIM_DATA = Path(\"../data/interim/\")\n",
-    "PROCESSED_DATA = Path(\"../data/processed/\")\n",
-    "FINAL_DATA = Path(\"../data/final/\")"
+    "DATOS_BRUTOS = Path(\"../datos/brutos/\")\n",
+    "DATOS_INTERINOS = Path(\"../datos/interinos/\")\n",
+    "DATOS_PROCESADOS = Path(\"../datos/procesados/\")\n",
+    "DATOS_EXTERNOS = Path(\"../datos/externos/\")"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree(RAW_DATA)"
+    "arbol(DATOS_BRUTOS)"
    ]
   },
   {
