--- a/{{cookiecutter.ficha_del_proyecto}}/notebooks/00_DataPrep.ipynb
+++ b/{{cookiecutter.ficha_del_proyecto}}/notebooks/00_DataPrep.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# {{cookiecutter.project_code}} - {{cookiecutter.project_name}}\n",
-    "#### {{cookiecutter.project_short_description}}\n",
+    "# {{cookiecutter.nombre_del_proyecto}}\n",
+    "#### {{cookiecutter.descripcion_corta}}\n",
     "\n",
     "<details>\n",
     "    <summary><strong>Meta</strong></summary>\n",
