--- a/{{cookiecutter.ficha_del_proyecto}}/notebooks/00_DataPrep.ipynb
+++ b/{{cookiecutter.ficha_del_proyecto}}/notebooks/00_DataPrep.ipynb
@@ -36,8 +36,8 @@
     "from zipfile import ZipFile\n",
     "from pathlib import Path\n",
     "from herramientas import arbol\n",
-    "from datetime import datetime as dt\n",
-    "hoy = dt.today().strftime(\"%d-%b-%y\")\n",
+    "import arrow\n",
+    "hoy = arrow.now().format(\"DD-MMM-YY\", locale = \"es\")\n",
     "\n",
     "hoy"
    ]
